Updated start page text

--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -33,13 +33,11 @@
 
 <div class="centerbox textbox">
 	<h1>Hej, och välkommen till KiB!</h1>
-	<p>...eller “Konfliktspel i Borlänge” om du nu så vill. Vi är en ideel förening placerad centralt i Dalarna, i Borlänge närmare bestämt (namnet spoilar det lite…). </p>
+	<p>...eller “Konfliktspel i Borlänge” om du nu så vill. Vi är en ideell förening placerad centralt i Dalarna, i Borlänge närmare bestämt.  </p>
 
-<p>Ordförande hälsar välkommen</p>
+<p>Här spelas det Warhammer 40k, Infinity, Flames of war, Warmachine & Hordes, Magic och om någon tar med sig ett brädspel av något slag så är det stor chans att det spelas med.  </p>
 
-<p>Här spelas det Warhammer 40k, Infinity, Flames of war, Warmachine & Hordes, Magic och om någon tar med sig ett brädspel av något slag så är det stor chans att det spelas med. </p>
-
-<p>Föreningens existens (om än inte nödvändigtvis i nuvarande form) sträcker sig tillbaka till xxxx då några få dedikerade drog igång spelandet i Bridgens Hus (Borlänge). Fler spelsugna, erfarna som nybörjare, drog sig dit och succén var ett faktum. Om man bortser från från ett år där i mitten då vi nyttjade en annan lokal så har vi sedan starten hållit spelandet på Bridgens vid liv!</p>
+<p>Föreningens existens (om än inte nödvändigtvis i nuvarande form) sträcker sig tillbaka till 2007 då några få dedikerade drog igång spelandet i Bridgens Hus (Borlänge). Fler spelsugna, erfarna som nybörjare, drog sig dit och succén var ett faktum. Om man bortser från ett år där i mitten då vi nyttjade en annan lokal, har vi sedan starten hållit spelandet på Bridgens vid liv!</p>
 
 <p>Låter det intressant? Kom gärna förbi någon gång, vi spelar i regel varje fredag kväll. Om inte annat så titta gärna runt på sidan och åter igen välkommen!</p>
 </div>
