Fixed incorrect text

--- a/pageroot/templates/leagueListPageTemplate.html
+++ b/pageroot/templates/leagueListPageTemplate.html
@@ -2,7 +2,7 @@
 	<div class="jumbotron">
 		<h1>Ligor!</h1>
 		<p>Nedan listas ligor som pågår i KiB's regi!</p>
-		<p>De markerade med grönt är pågående, så joina en och kötta vet jag :D</p>
+		<p>Joina en och kötta vet jag :D</p>
 	</div>
 	
 	<div ng-show="leagues.$resolved && leagues.length > 0">
