Added start page font

--- a/pageroot/css/page.css
+++ b/pageroot/css/page.css
@@ -24,6 +24,13 @@ html, body {
   display: none !important;
 }
 
+@font-face {
+    font-family: 'Bebas Neue';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Bebas Neue'), url('fonts/BebasNeue.woff') format('woff');
+}
+
 img {
 	border:0;
 }
