Changed start page text to latest version

--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -6,25 +6,25 @@
 			<li>
 				<div>
 					<h1>Fantastisk stämning</h1>
-					<p>Att åka in för att spela och umgås känns aldrig jobbigt då man vet att man alltid kommer ha det trevligt! Här haglar skämten tätt och diskussionerna flödar!</p>
+					<p>Hos oss har man alltid trevligt. Ett hus med likasinnade människor, och väldigt roliga spel, gör det väldigt uppenbart hur man spenderar en fredagkväll! </p>
 				</div>
 			</li>
 			<li>
 			  <div>
 			    <h1>Bra spelklimat</h1>
-			    <p>Hos oss finns inga dåliga förlorare! Poängen med varje match är att ha det trevligt och inte att förnedra sin motståndare. Där med inte sagt att det inte förkommer visst mått av cheesande från vissa personer (ni vet vilka ni är), men det är en del av spelet ;) </p>
+			    <p>Hos oss finns inga dåliga förlorare! Poängen med varje spel är att ha det trevligt och inte att förnedra sin motståndare. </p>
 			    </div>
 			</li>
 			<li>
 			  <div>
 			    <h1>Kunnigt folk</h1>
-			    <p>Funderar du på hur du bäst målar din nya modell, eller behöver du kanske hjälp med hur du ska spela för bästa resultat? Här finns det alltid kunniga människor att fråga, folk som målar som gudar eller spelar som rockstjärnor</p>
+			    <p>Funderar du på hur du bäst målar din nya modell, eller behöver du kanske hjälp med hur du ska spela för bästa resultat? Här finns det alltid kunniga människor att fråga!</p>
 			  </div>
 			</li>
 				<li>
 			  <div>
 			    <h1>Oväntad bonus</h1>
-			    <p>Öhm… we got candy ;)</p>
+			    <p>Det finns en kiosk i byggnaden, full med godis och läsk! Ta med dig växel, för här kan man spendera!</p>
 			  </div>
 			</li>
 		</ul>
@@ -32,16 +32,34 @@
 </div>
 
 <div class="centerbox textbox">
-	<h1>Hej, och välkommen till KiB!</h1>
-	<p>...eller “Konfliktspel i Borlänge” om du nu så vill. Vi är en ideell förening placerad centralt i Dalarna, i Borlänge närmare bestämt.  </p>
+  <h1 style="font-family:'Bebas Neue';">Hej, och välkommen till Konfliktspel i Borlänge</h1>
+  <h2 style="font-family:'Bebas Neue';text-align:center;color:gray;">En ideel förening i Dalarna</h2>
+  <p style="font-style:italic;">
+    &lt;Ordförande hälsar välkommen&gt;Hej! Jag heter Magnus Sohlberg och är ordförande för Konfliktspel i Borlänge. Jag vill hälsa dig hjärtligt välkommen till våran hemsida, och jag tycker det är jätteroligt att du trillat in hit! Jag hoppas du tycker det ser intressant ut här på sajten, och att du känner dig sugen att komma och hälsa på oss. Kanske för att testa spelen, köra en match, eller för att titta på. Kanske för att hitta likasinnade, eller om du är ute efter att ha väldigt kul.
+För det har i alla fall vi här i föreningen, och du är varmt välkommen att haka på!&lt;signing out&gt;
+  </p>
 
-<p>Här spelas det Warhammer 40k, Infinity, Flames of war, Warmachine & Hordes, Magic och om någon tar med sig ett brädspel av något slag så är det stor chans att det spelas med.  </p>
+  <p>Vi träffas på fredagar i Bridgens Hus i Borlänge, och här spelas det mycket! Bland våra aktiviteter finner du:</p>
+  <ul>
+    <li>Warhammer 40.000</li>
+    <li>Warmachine & Hordes</li>
+    <li>Infinity</li>
+    <li>Flames of War</li>
+    <li>Magic the Gathering</li>
+  </ul>
 
-<p>Föreningens existens (om än inte nödvändigtvis i nuvarande form) sträcker sig tillbaka till 2007 då några få dedikerade drog igång spelandet i Bridgens Hus (Borlänge). Fler spelsugna, erfarna som nybörjare, drog sig dit och succén var ett faktum. Om man bortser från ett år där i mitten då vi nyttjade en annan lokal, har vi sedan starten hållit spelandet på Bridgens vid liv!</p>
+  <p>Vi är även väldigt duktiga på att ta med oss brädspel och liknande, så hos oss går man aldrig uttråkad!</p>
 
-<p>Låter det intressant? Kom gärna förbi någon gång, vi spelar i regel varje fredag kväll. Om inte annat så titta gärna runt på sidan och åter igen välkommen!</p>
+  <p>Konfliktspel i Borlänge har sedan 2007 hållit till i Bridgens Hus. Efter att ha provat en annan lokal vid ett tillfälle fann vi oss vara tillbaka igen. Bridgens Hus har bra lokaler och mycket plats. Vill man spela, kan man spela.</p>
+
+  <p>Från början startades vi upp av ett par dedikerade människor som ville se hobbyn växa, vilket den också gjorde. Fler spelsugna, erfarna som nybörjare, drog sig dit och succén var ett faktum. Vi ser den fortfarande växa, och hoppas att även du vill vara med.</p>
+
+  <p>Låter det intressant? Kom gärna förbi någon fredag! Det finns alltid någon att spela med, och väldigt många att prata med.</p>
+
+  <p>Du är väldigt välkommen!</p>
 </div>
 
+<!--
 <div class="container-fluid">
 	<div id="imagegrid" class="centerbox row" class="">
 		<div class="imagebox col-md-6">
@@ -54,3 +72,4 @@
 		<div class="clear"></div>
 	</div>
 </div>
+-->
