--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="centerbox textbox">
-  <h1 style="font-family:'Bebas Neue';">Hej, och välkommen till Konfliktspel i Borlänge</h1>
+  <h1 style="font-family:'Bebas Neue';text-align:center;">Hej, och välkommen till Konfliktspel i Borlänge</h1>
   <h2 style="font-family:'Bebas Neue';text-align:center;color:gray;">En ideel förening i Dalarna</h2>
   <p style="font-style:italic;">
     &lt;Ordförande hälsar välkommen&gt;Hej! Jag heter Magnus Sohlberg och är ordförande för Konfliktspel i Borlänge. Jag vill hälsa dig hjärtligt välkommen till våran hemsida, och jag tycker det är jätteroligt att du trillat in hit! Jag hoppas du tycker det ser intressant ut här på sajten, och att du känner dig sugen att komma och hälsa på oss. Kanske för att testa spelen, köra en match, eller för att titta på. Kanske för att hitta likasinnade, eller om du är ute efter att ha väldigt kul.
