--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -33,9 +33,9 @@
 
 <div class="centerbox textbox">
   <h1 style="font-family:'Bebas Neue';text-align:center;">Hej, och välkommen till Konfliktspel i Borlänge</h1>
-  <h2 style="font-family:'Bebas Neue';text-align:center;color:gray;">En ideel förening i Dalarna</h2>
+  <h2 style="font-family:'Bebas Neue';text-align:center;color:gray;">En ideell förening i Dalarna</h2>
   <p style="font-style:italic;">
-    &lt;Ordförande hälsar välkommen&gt;Hej! Jag heter Magnus Sohlberg och är ordförande för Konfliktspel i Borlänge. Jag vill hälsa dig hjärtligt välkommen till våran hemsida, och jag tycker det är jätteroligt att du trillat in hit! Jag hoppas du tycker det ser intressant ut här på sajten, och att du känner dig sugen att komma och hälsa på oss. Kanske för att testa spelen, köra en match, eller för att titta på. Kanske för att hitta likasinnade, eller om du är ute efter att ha väldigt kul.
+    Hej! Jag heter Magnus Sohlberg och är ordförande för Konfliktspel i Borlänge. Jag vill hälsa dig hjärtligt välkommen till våran hemsida, och jag tycker det är jätteroligt att du trillat in hit! Jag hoppas du tycker det ser intressant ut här på sajten, och att du känner dig sugen att komma och hälsa på oss. Kanske för att testa spelen, köra en match, eller för att titta på. Kanske för att hitta likasinnade, eller om du är ute efter att ha väldigt kul.
 För det har i alla fall vi här i föreningen, och du är varmt välkommen att haka på!&lt;signing out&gt;
   </p>
 
