Fixed incorrect font path

--- a/pageroot/css/page.css
+++ b/pageroot/css/page.css
@@ -28,7 +28,7 @@ html, body {
     font-family: 'Bebas Neue';
     font-style: normal;
     font-weight: normal;
-    src: local('Bebas Neue'), url('fonts/BebasNeue.woff') format('woff');
+    src: local('Bebas Neue'), url('../fonts/BebasNeue.woff') format('woff');
 }
 
 img {
