--- a/pageroot/css/slide.css
+++ b/pageroot/css/slide.css
@@ -29,7 +29,11 @@
 }
 
 #slidecenter ul li div h1 {
-    font-size:35pt;
+    font-size:40pt;
+}
+
+#slidecenter ul li div p {
+    max-width:550px;
 }
 
 bg-video {
