Minor text touchups

--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -2,7 +2,7 @@
 	<div class="centerbox" id="slidecenter">
 		<bg-video videos="videos"></bg-video>
 		<div class="clear:both;"></div>
-		<ul rn-carousel rn-carousel-auto-slide="8" rn-carousel-indicator='true' rn-carousel-transition='fade'>
+		<ul rn-carousel rn-carousel-auto-slide="10" rn-carousel-indicator='true' rn-carousel-transition='fade'>
 			<li>
 				<div>
 					<h1>Fantastisk stämning</h1>
@@ -12,7 +12,7 @@
 			<li>
 			  <div>
 			    <h1>Bra spelklimat</h1>
-			    <p>Hos oss finns inga dåliga förlorare! Poängen med varje spel är att ha det trevligt och inte att förnedra sin motståndare. </p>
+			    <p>Hos oss finns inga dåliga förlorare! Poängen med varje spel är att ha det trevligt, inte att förnedra sin motståndare. </p>
 			    </div>
 			</li>
 			<li>
