Minor slide text touchups

--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -6,7 +6,7 @@
 			<li>
 				<div>
 					<h1>Fantastisk stämning</h1>
-					<p>Hos oss har man alltid trevligt. Ett hus med likasinnade människor, och väldigt roliga spel, gör det väldigt uppenbart hur man spenderar en fredagkväll! </p>
+					<p>Hos oss har man alltid trevligt. Ett hus med likasinnade människor och väldigt roliga spel, gör det uppenbart hur man spenderar en fredagkväll!</p>
 				</div>
 			</li>
 			<li>
