--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -12,7 +12,7 @@
 			<li>
 			  <div>
 			    <h1>Bra spelklimat</h1>
-			    <p>Hos oss finns inga dåliga förlorare! Poängen med varje spel är att ha det trevligt, inte att förnedra sin motståndare. </p>
+			    <p>Hos oss finns inga dåliga förlorare! Poängen med varje spel är att ha det trevligt, och att få sig ett gott skratt!</p>
 			    </div>
 			</li>
 			<li>
