--- a/pageroot/templates/leagueDetailsPageTemplate.html
+++ b/pageroot/templates/leagueDetailsPageTemplate.html
@@ -10,7 +10,7 @@
 				</div>
 				
 				<div class="col-xs-2">
-					<a href="#/leagues/{{league.leagueId}}/reportmatch" ng-show="leagueActive">Raportera Match</a>
+					<a href="#/leagues/{{league.leagueId}}/reportmatch" ng-show="leagueActive">Rapportera Match</a>
 				</div>
 			</div>
 		</div>
