--- a/pageroot/css/overrides.css
+++ b/pageroot/css/overrides.css
@@ -5,3 +5,13 @@
 		padding-right:10px;
 	}
 }
+
+@media (max-width: 370px) {
+	#menubar{
+		display:none;
+	}
+	
+	#menubar-narrow {
+		display:block;
+	}
+}
