--- a/pageroot/css/menu.css
+++ b/pageroot/css/menu.css
@@ -17,7 +17,7 @@
 #menubar ul li {
 	display:inline-block;
 	text-align:center;
-	padding:0 20px 0 20px;
+	padding:0 20px 0 17px;
 	border-right:1px solid #353B31;
 }
 
@@ -36,6 +36,8 @@
 	vertical-align:center;
 	line-height:40px;
 }
+
+/* In narrow mode */
 
 #menubar-narrow {
 	display:none;
