--- a/pageroot/admin/templates/adminIndex.html
+++ b/pageroot/admin/templates/adminIndex.html
@@ -61,6 +61,7 @@
 					<div class="panel-body">
 						<div class="list-group" style="text-align:center;">
 							<a href="#/admin/leagues" class="list-group-item">Add / Administer leagues</a>
+							<a href="#/admin/matches" class="list-group-item">Administer matches</a>
 						</div>
 					</div>
 				</div>
