--- a/pageroot/admin/templates/adminMatchesPageTemplate.html
+++ b/pageroot/admin/templates/adminMatchesPageTemplate.html
@@ -4,7 +4,7 @@
 			<span class="glyphicon glyphicon-chevron-left"></span> Back
 		</a>
 		
-		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Administer ligor</h1>
+		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Administer matches</h1>
 		<div class="clearfix"></div>
 	</div>
 	
