Added Magic the Gathering autocard tags

--- a/forum-theme/kib/template/viewtopic_body.html
+++ b/forum-theme/kib/template/viewtopic_body.html
@@ -269,3 +269,5 @@
 <!-- ENDIF -->
 
 <!-- INCLUDE overall_footer.html -->
+<!-- Magic the Gathering autocards -->
+<script type="text/javascript">installCardTags();</script>
