--- a/forum-theme/kib/template/overall_header.html
+++ b/forum-theme/kib/template/overall_header.html
@@ -80,6 +80,10 @@
 <script type="text/javascript" src="{T_SUPER_TEMPLATE_PATH}/styleswitcher.js"></script>
 <script type="text/javascript" src="{T_SUPER_TEMPLATE_PATH}/forum_fn.js"></script>
 
+<!-- Magic the Gathering autocards -->
+<script type="text/javascript" src="{T_TEMPLATE_PATH}/cardTags.js"></script>
+<script type="text/javascript" src="{T_TEMPLATE_PATH}/Decklist.js"></script>
+
 <script src="{T_TEMPLATE_PATH}/jquery.min.js"></script>
 
 <script type="text/javascript">
