--- a/pageroot/templates/leagueReportMatchTemplate.html
+++ b/pageroot/templates/leagueReportMatchTemplate.html
@@ -16,10 +16,15 @@
               title-field="username"/>
 		</div> -->
 		
+		<div class="form-group" ng-if="auth.authlevel > 1">
+			<label>Spelare 1</label>
+			<input type="text" ng-model="selectedPlayer1"  typeahead="user.username for user in lookupUser($viewValue)" class="form-control" required>
+		</div>
+		
 		<div class="form-group">
 			<label ng-if="auth.authlevel == 1">Vem mötte du (användarnamn)</label>
 			<label ng-if="auth.authlevel > 1">Spelare 2</label>
-			<angucomplete-alt id="player2"
+<!-- 			<angucomplete-alt id="player2"
               pause="400"
               selected-object="selectedPlayer2"
 			  minlength = "2"
@@ -27,7 +32,8 @@
               remote-url="http://kibdev.crabdance.com/modend/api/authinfo/completeusername/"
               title-field="username"
 			  field-required="true"
-			  required/>
+			  required/> -->
+			  <input type="text" ng-model="selectedPlayer2"  typeahead="user.username for user in lookupUser($viewValue)" class="form-control" required>
 		</div>
 		<div class="form-group" >
 			<label>Vilket datum spelades matchen</label>
