--- a/pageroot/src/app/index.scss
+++ b/pageroot/src/app/index.scss
@@ -43,7 +43,7 @@ html, body {
     font-family: 'Bebas Neue';
     font-style: normal;
     font-weight: normal;
-    src: local('Bebas Neue'), url('..assets/fonts/BebasNeue.woff') format('woff');
+    src: local('Bebas Neue'), url('../assets/fonts/BebasNeue.woff') format('woff');
 }
 
 img {
