--- a/pageroot/src/app/league/details.template.html
+++ b/pageroot/src/app/league/details.template.html
@@ -21,7 +21,7 @@
 		</div>
 		<div id="infobox-closer">
 			<a ng-click="minimized=!minimized">
-				<img src="media/league-info-open.png" />
+				<img src="assets/images/league-info-open.png" />
 			</a>
 		</div>
 	</div>
