--- a/pageroot/src/app/vendor.scss
+++ b/pageroot/src/app/vendor.scss
@@ -1,3 +1,4 @@
+$bootstrap-sass-asset-helper: false;
 $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 
 /* Do not remove this comments bellow. It's the markers used by wiredep to inject
