--- a/pageroot/src/admin/main/admin.scss
+++ b/pageroot/src/admin/main/admin.scss
@@ -11,3 +11,13 @@ canvas {
 	height: 100px;
 	margin: 6px 0 0 6px;
 }
+
+.admincontent {
+	.page-header{
+		margin-top:0px !important;	
+		
+		h1 {
+			margin-top: 0px;	
+		}
+	}
+}
