--- a/pageroot/src/app/league/list.template.html
+++ b/pageroot/src/app/league/list.template.html
@@ -1,8 +1,8 @@
 <div class="centerbox" style="margin-top:20px;">
 	<div class="jumbotron">
 		<h1>Ligor!</h1>
-		<p>Nedan listas ligor som pågår i KiB's regi!</p>
-		<p>Joina en och kötta vet jag :D</p>
+		<p>Nedan listas alla ligor som finns i KiB's regi!</p>
+		<p ng-hide="allLeaguesIsInactive()">Joina en och kötta vet jag :D</p>
 	</div>
 	
 	<div ng-show="leagues.$resolved && leagues.length > 0">
