--- a/forum-theme/kib/theme/stylesheet.css
+++ b/forum-theme/kib/theme/stylesheet.css
@@ -28,6 +28,9 @@
 @import url("tweaks.css");
 @import url("colours.css");
 @import url("kib.css");
+
+/* KiB-Styles */
 @import url("../../../pageroot/css/page.css");
 @import url("../../../pageroot/css/menu.css");
 @import url("../../../pageroot/css/footer.css");
+/* -- */
