Readded the nice kitty

--- a/pageroot/src/app/gallery/gallery-page.template.html
+++ b/pageroot/src/app/gallery/gallery-page.template.html
@@ -1,74 +1,9 @@
-<div id="gallerypagebody">
-	<div class="galleryrowholder">
-		<div class="centerbox">
-			<h1 style="text-align:center;color:white;">Pics of fame</h1>
-		</div>
-	</div>
+<div class="centerbox jumbotron" style="margin-top:20px;">
+        <h1>Välkommen till bildgalleriet</h1>
+        <p>....eller du hade varit, om galleriet hade varit i drift.</p>
+        <p>För att du inte ska gå helt tomhänt har du här en rolig bild på en katt</p>
+</div>
 
-	<gallery-row images="images" name="Senaste bilder"></gallery-row>
-
-	<div class="gallerytags jumbotron centerbox">
-		<ul class="list-inline">
-			<li style="font-size:30px;">40k</li>
-			<li style="font-size:20px;">flames of war</li>
-			<li style="font-size:15px;">infinty</li>
-			<li style="font-size:15px;">turneringar</li>
-			<li style="font-size:25px;">warmahordes</li>
-			<li style="font-size:20px;">magic</li>
-			<li style="font-size:15px;">malifaoux</li>
-						<li style="font-size:30px;">40k</li>
-			<li style="font-size:20px;">flames of war</li>
-			<li style="font-size:15px;">infinty</li>
-			<li style="font-size:15px;">turneringar</li>
-			<li style="font-size:25px;">warmahordes</li>
-			<li style="font-size:20px;">magic</li>
-			<li style="font-size:15px;">malifaoux</li>
-						<li style="font-size:30px;">40k</li>
-			<li style="font-size:20px;">flames of war</li>
-			<li style="font-size:15px;">infinty</li>
-			<li style="font-size:15px;">turneringar</li>
-			<li style="font-size:25px;">warmahordes</li>
-			<li style="font-size:20px;">magic</li>
-			<li style="font-size:15px;">malifaoux</li>
-						<li style="font-size:30px;">40k</li>
-			<li style="font-size:20px;">flames of war</li>
-			<li style="font-size:15px;">infinty</li>
-			<li style="font-size:15px;">turneringar</li>
-			<li style="font-size:25px;">warmahordes</li>
-			<li style="font-size:20px;">magic</li>
-			<li style="font-size:15px;">malifaoux</li>
-						<li style="font-size:30px;">40k</li>
-			<li style="font-size:20px;">flames of war</li>
-			<li style="font-size:15px;">infinty</li>
-			<li style="font-size:15px;">turneringar</li>
-			<li style="font-size:25px;">warmahordes</li>
-			<li style="font-size:20px;">magic</li>
-			<li style="font-size:15px;">malifaoux</li>
-						<li style="font-size:30px;">40k</li>
-			<li style="font-size:20px;">flames of war</li>
-			<li style="font-size:15px;">infinty</li>
-			<li style="font-size:15px;">turneringar</li>
-			<li style="font-size:25px;">warmahordes</li>
-			<li style="font-size:20px;">magic</li>
-			<li style="font-size:15px;">malifaoux</li>
-						<li style="font-size:30px;">40k</li>
-			<li style="font-size:20px;">flames of war</li>
-			<li style="font-size:15px;">infinty</li>
-			<li style="font-size:15px;">turneringar</li>
-			<li style="font-size:25px;">warmahordes</li>
-			<li style="font-size:20px;">magic</li>
-			<li style="font-size:15px;">malifaoux</li>
-						<li style="font-size:30px;">40k</li>
-			<li style="font-size:20px;">flames of war</li>
-			<li style="font-size:15px;">infinty</li>
-			<li style="font-size:15px;">turneringar</li>
-			<li style="font-size:25px;">warmahordes</li>
-			<li style="font-size:20px;">magic</li>
-			<li style="font-size:15px;">malifaoux</li>
-		</ul>
-	</div>
-	
-	<!--<gallery-row images="images2" name="Test Gallery 2"></gallery-row>
-
-	<gallery-row images="images3" name="Test Gallery 3"></gallery-row>-->
+<div class="centerbox" style="margin-top:10px;margin-bottom:20px;text-align:center;">
+        <img src="http://images1.fanpop.com/images/image_uploads/Funny-Cat-Pictures-cats-935656_500_375.jpg" style="border:4px solid #353B31; border-radius:10px;"/>
 </div>
