Changed logo path in forum-theme

--- a/forum-theme/kib/template/overall_header.html
+++ b/forum-theme/kib/template/overall_header.html
@@ -113,7 +113,7 @@
     
 	<div class="centerbox" id="header">
 				<a href="http://konfliktspeliborlange.se/#">
-<img src="http://konfliktspeliborlange.se/media/new-logo.jpg" style="height:148px;margin-top:2px;"/></a>
+<img src="http://konfliktspeliborlange.se/assets/images/new-logo.jpg" style="height:148px;margin-top:2px;"/></a>
 	</div>
 	
 	<div class="widebox" id="menubarcontainer">
