Updated facebook link in forum theme

--- a/forum-theme/kib/template/overall_footer.html
+++ b/forum-theme/kib/template/overall_footer.html
@@ -42,8 +42,8 @@
 	<div class="centerbox" id="footercontent">
 		<p style="margin-top:4px;">Bridgens hus, Borlänge. (Ekorrstigen 5)</p>
 		
-		<a href="#">
-			<img class="socialmediaimage" src="/media/facebook.png"></img>
+		<a href="https://www.facebook.com/groups/416509568397594/">
+			<img class="socialmediaimage" src="http://konfliktspeliborlange.se/assets/images/facebook.png"></img>
 		</a>
 			
 		<div class="clear"></div>
