--- a/pageroot/src/app/main/main.html
+++ b/pageroot/src/app/main/main.html
@@ -16,7 +16,7 @@
 							<a href="#/leagues">Ligor</a>
 						</li>
 						<li>
-							<a href="/forum">Forum</a>
+							<a href="http://bbs.konfliktspeliborlange.se">Forum</a>
 						</li>
 					</ul>
 				</div>
