Tabs on contestant info page. Support for pseudo matchups

--- a/pageroot/src/app/tournament/reportscore.modal.template.html
+++ b/pageroot/src/app/tournament/reportscore.modal.template.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3 class="modal-title">Report score</h3>
+	<h3 class="modal-title">Rapportera poäng</h3>
 </div>
 <div class="modal-body">
 	<form>
@@ -14,5 +14,5 @@
 	</form>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="report()" ng-disabled="!scores.player1Score && !scores.player2Score">Report</button>
+	<button class="btn btn-primary" ng-click="report()" ng-disabled="!scores.player1Score && !scores.player2Score">Rapportera</button>
 </div>
